--- a/src/index.css
+++ b/src/index.css
@@ -1568,7 +1568,7 @@ table tr:nth-child(even){
   }
   .email-inp{
     width: 80%;
-    padding: 5px 20px;
+    padding: 5px 30px;
     border-radius: 20px;
     border: 1px solid gray;
   }
@@ -1604,6 +1604,9 @@ table tr:nth-child(even){
     padding: 2px;
     font-size: 13px;
   }
+  .login input{
+    padding: 8px 10px;
+  }
 
   
 }
@@ -1637,5 +1640,16 @@ table tr:nth-child(even){
     background-color:rgb(194, 15, 119);
     color: white;
     font-size: 13px;
+  }
+  .login input{
+    padding: 5px 10px;
+  }
+  .name{
+    gap: 5px;
+    margin-top: 5px;
+    padding-bottom: 5px;
+    padding-right: 10px;
+    padding-left: 5px;
+    font-size: 12px;
   }
 }
